--- a/src/app/pages/executuve/tabs-doctors/tabs-doctors.page.html
+++ b/src/app/pages/executuve/tabs-doctors/tabs-doctors.page.html
@@ -91,11 +91,14 @@
                     </h2>
 
                   </ion-item>
-                  <ion-row class="ion-no-padding" lines="none" style="padding-top: 10px !important;">
+                  <ion-row class="ion-no-padding" lines="none" style="padding-top: 1px !important;">
                     <p>
   
                       <span>
                         <ion-icon name="newspaper-outline" slot="start"></ion-icon> {{x.deptName}}
+                      </span><br />
+                      <span>
+                        &nbsp;&nbsp;&nbsp; {{x.expertise}}
                       </span>
                     </p>
                     <br />
