--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -109,7 +109,11 @@
                   >
                     <h2 class="ion-text-wrap" style="padding-top: 20px;">
                       {{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}
+                      <ion-text color="mango">
+                        <p color="primary"><b>July 15, 1990 | (28) | M</b></p>
+                      </ion-text>
                     </h2>
+                   
                     <ion-badge
                       color="warning"
                       slot="end"
