--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -73,6 +73,7 @@ ___  ___        _      _  _
     <app-chh-app-patient-header
       [data]="data"
       [dateAdmitted]="dateAdmitted"
+      [dischargeNotice]="dischargeNotice"
       [forMoreOrLess]="true"
       >
     </app-chh-app-patient-header>
