--- a/src/app/pages/executuve/components/doctordetail/doctordetail.component.html
+++ b/src/app/pages/executuve/components/doctordetail/doctordetail.component.html
@@ -31,7 +31,12 @@
 
       <ion-row class="ion-no-padding" lines="none" style="padding-top: 10px !important;">
         <p>
-            {{deptName}}
+          <span>
+            <ion-icon name="newspaper-outline" slot="start"></ion-icon> {{deptName}}
+          </span><br />
+          <span>
+            <ion-icon name="clipboard-outline" slot="start"></ion-icon> {{expertise}}
+          </span>
         </p>
         <br />
       </ion-row>
