--- a/src/app/pages/executuve/tabs-doctors/tabs-doctors.page.html
+++ b/src/app/pages/executuve/tabs-doctors/tabs-doctors.page.html
@@ -98,7 +98,7 @@
                         <ion-icon name="newspaper-outline" slot="start"></ion-icon> {{x.deptName}}
                       </span><br />
                       <span>
-                        &nbsp;&nbsp;&nbsp; {{x.expertise}}
+                        <ion-icon name="clipboard-outline" slot="start"></ion-icon> {{x.expertise}}
                       </span>
                     </p>
                     <br />
