--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -120,7 +120,7 @@
         <ion-col size="7">
           <b>
             <ion-text color="danger">
-              &#8369; {{data1}} {{withVat}}
+              &#8369; {{data1|number}} {{withVat}}
             </ion-text>
           </b>
         </ion-col>
@@ -150,16 +150,16 @@
       <ion-text class="fs-12 ion-text-wrap" color="danger">Insurance (HMO) and PhilHealth coverage applies.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1}}</b> (+ VAT) will be collected from your patient.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{data1}}</b> (+ VAT)</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{data1 | number}}</b> (+ VAT)</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1}}</b> will be collected from your patient.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{data1}}</b>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{data1 | number}}</b>
       </ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10">
@@ -171,16 +171,16 @@
   <ul *ngIf="payvenueN == 'H' && data1 > 0">
 
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1}}</b> (+ VAT) will be collected from your patient.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1}}</b> (+ VAT) + PhilHealth</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> (+ VAT) + PhilHealth</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1}}</b> will be collected from your patient.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1}}</b> + PhilHealth
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> + PhilHealth
       </ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10">
@@ -348,17 +348,17 @@
   <ion-item class="ion-no-margin">
     <ion-grid>
       <ion-row>
-        <ion-col size="5">
+        <ion-col size="4">
           <b>
             <ion-text color="danger">
               Amount:
             </ion-text>
           </b>
         </ion-col>
-        <ion-col size="7">
+        <ion-col size="8">
           <b>
             <ion-text color="danger">
-              &#8369; {{data1}} {{withVat}}
+              &#8369; {{data1 | number}} {{withVat}}
             </ion-text>
           </b>
         </ion-col>
@@ -388,16 +388,16 @@
       <ion-text class="fs-12 ion-text-wrap" color="danger">Insurance (HMO) and PhilHealth coverage applies.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1}}</b> (+ VAT) will be collected from your patient.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{data1}}</b> (+ VAT)</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{data1 | number}}</b> (+ VAT)</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1}}</b> will be collected from your patient.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{data1}}</b>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + <b>&#8369;{{data1 | number}}</b>
       </ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10">
@@ -409,16 +409,16 @@
   <ul *ngIf="payvenueN == 'H' && data1 > 0">
 
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1}}</b> (+ VAT) will be collected from your patient.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1}}</b> (+ VAT) + PhilHealth</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> (+ VAT) + PhilHealth</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1}}</b> will be collected from your patient.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1}}</b> + PhilHealth
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> + PhilHealth
       </ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10">
