--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -94,7 +94,7 @@
           <div *ngFor="let x of inPatients">
 
          
-            <ion-card (click)="detail(x.patient_no)" mode="ios"  class="pointer">
+            <ion-card (click)="detail(x.admission_no)" mode="ios"  class="pointer">
               
               <ion-item lines="none">
                 <ion-avatar slot="start">
