--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -224,6 +224,7 @@
       <div class="slider-text">
         <h2>App installed</h2>
         <p>DOKi is the latest app installed.</p>
+        <p>6.) Tap DOKi icon from the Home Screen to launch the App.</p>
       </div>
       <div class="navigator">
         <ion-button color="primary" fill="clear" (click)="goback()"
