updated login page info

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -90,11 +90,12 @@
           <ion-item class="cs-wrapper" lines="none">
             <p align="center" class="fontSize-12">
               {{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO}}
-              <br />(<b
-                ><a href="tel: +63322338000"
-                  >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}</a
-                ></b
-              >).
+              <br />
+              <b><a href="tel: +63322338000">{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}
+                </a></b><br />
+                <b> <a href="mailto: doki@chonghua.com.ph">doki@chonghua.com.ph
+                </a></b>
+
               <!-- <br />
               <br />{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_APP_VERSION}}
               {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}} -->
