centert text on login

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -87,23 +87,37 @@
               </p>
             </ion-card-content>
           </ion-card>
-          <ion-item class="cs-wrapper" lines="none">
-            <p align="center" class="fontSize-12">
-              {{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO}}
-              <br />
-              <b><a href="tel: +63322338000">{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}
-                </a></b><br />
-                <b> <a href="mailto: doki@chonghua.com.ph">doki@chonghua.com.ph
-                </a></b>
-
-              <!-- <br />
-              <br />{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_APP_VERSION}}
-              {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}} -->
-            </p>
-          </ion-item>
         </ion-col>
       </ion-row>
     </ion-grid>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <div class="ion-text-center fontSize-12">
+            {{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO}}
+          </div>
+          <div class="ion-text-center fontSize-12">
+            <b>
+              <a href="tel: +63322338000">{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}
+              </a>
+          </b>
+          </div>
+          <div class="ion-text-center fontSize-12">
+            <b>
+              <a href="mailto: doki@chonghua.com.ph">doki@chonghua.com.ph</a>
+          </b>
+          </div>
+        </ion-col>
+      </ion-row>
+
+    </ion-grid>
+
+
+
+
+
+
+
   </div>
 </ion-content>
 <ion-footer class="ion-no-border">
