Add story set illustrations credit.

--- a/src/app/pages/executuve/tabs-settings/tabs-settings.page.html
+++ b/src/app/pages/executuve/tabs-settings/tabs-settings.page.html
@@ -129,6 +129,10 @@
                 <ion-item lines="none">
                   <p>{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO}} (<b><a href="tel: +63322338000">{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}</a></b>). <br/> <br />{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_APP_VERSION}} {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}</p>
                 </ion-item>
+
+                <ion-item lines="none">
+                  <p>Other Credits: <a href="https://storyset.com/user" target="_BLANK"> User illustrations by Storyset</a></p>
+                </ion-item>
               </ion-list>
             </ion-card-content>
           </ion-card>
