--- a/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
+++ b/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
@@ -93,7 +93,7 @@
               </ion-item>
               <ion-item lines="none">
                 <ion-input id="confirmPassword" formControlName="confirmPassword" type="password" class="form-control"
-                [ngClass]="frmSignup.controls['oldPassword'].invalid ? 'is-invalid' : ''"[type]="getType4()"  [(ngModel)]="OldPassword" placeholder = "Current Password"></ion-input>
+                [ngClass]="frmSignup.controls['oldPassword'].invalid ? 'is-invalid' : ''"[type]="getType4()"  [(ngModel)]="OldPassword" placeholder = "Current Password"  (ionChange)="inputchange()"></ion-input>
                 <ion-icon  name="eye-off-outline" [name]="getName4()"item-right  (click)="showPassword3()"  class="rectangle3"></ion-icon>
               </ion-item>
 
@@ -144,7 +144,7 @@
               </ion-item>
               <ion-item lines="none">
                 <ion-input id="confirmPassword" formControlName="confirmPassword" type="password" class="form-control"
-                [ngClass]="frmSignup.controls['confirmPassword'].invalid ? 'is-invalid' : ''"[type]="getType3()"  [(ngModel)]="ConfirmPassword" placeholder = "Confirm New Password"></ion-input>
+                [ngClass]="frmSignup.controls['confirmPassword'].invalid ? 'is-invalid' : ''"[type]="getType3()"  [(ngModel)]="ConfirmPassword" placeholder = "Confirm New Password"  (ionChange)="inputchange()"></ion-input>
                 <ion-icon  name="eye-off-outline" [name]="getName3()"item-right  (click)="showPassword2()"  class="rectangle3"></ion-icon>
               </ion-item>
 
@@ -165,12 +165,11 @@
                   id="btn-confirm"
                   (click)="save()"
                   color="mango"
-                  [disabled]="frmSignup.invalid"
-                  disabled="{{btnDisable}}"
+                  [disabled]="!btnSubmit"
+                
                 >
                   SAVE
-                  <span *ngIf="!btnDisable"></span
-                    ><ion-spinner *ngIf="btnDisable"></ion-spinner>
+  
                 </ion-button>
               </ion-col>
               <ion-col size-xs="6">
