--- a/src/app/chh-web-components/chh-app-forgot-password/chh-app-forgot-password.component.html
+++ b/src/app/chh-web-components/chh-app-forgot-password/chh-app-forgot-password.component.html
@@ -119,7 +119,7 @@
                 color="mango"
                 (click)="forgotpassword()"
               >
-                <div *ngIf="!btnDisable">Submit</div>
+                <div *ngIf="!btnDisable">SEND RESET LINK</div>
                 <span *ngIf="!btnDisable"></span>
                 <ion-spinner *ngIf="btnDisable"></ion-spinner>
               </ion-button>
