--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -372,7 +372,7 @@
           <ion-card mode="ios">
             <ion-row>
               <ion-col size-xs="12" class="ion-text-center">
-                <ion-item>
+                <ion-item style="font-size: 13px !important;">
                   <ion-label>From</ion-label>
                   <ion-select value="01" [(ngModel)]="monthTrendFrom" (ionChange)="monthTrendFromTo()">
                     <ion-select-option value="01">January</ion-select-option>
@@ -389,7 +389,7 @@
                     <ion-select-option value="12">December</ion-select-option>
                   </ion-select>
                 </ion-item>
-                <ion-item>
+                <ion-item style="font-size: 13px !important;">
                   <ion-label>To</ion-label>
                   <ion-select value="12" [(ngModel)]="monthTrendTo" (ionChange)="monthTrendFromTo()">
                     <ion-select-option value="01">January</ion-select-option>
@@ -406,7 +406,7 @@
                     <ion-select-option value="12">December</ion-select-option>
                   </ion-select>
                 </ion-item>
-                <ion-item>
+                <ion-item style="font-size: 13px !important;">
                   <ion-label>Year</ion-label>
                   <ion-select [(ngModel)]="yearTreandTO" (ionChange)="monthTrendYear()">
                     <ion-select-option value="2022">2022</ion-select-option>
