--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -369,7 +369,7 @@
 
           </ion-card>
 
-          <ion-card mode="ios">
+          <!--ion-card mode="ios">
             <ion-row>
               <ion-col size-xs="12" class="ion-text-center">
                 <ion-item style="font-size: 13px !important;">
@@ -419,14 +419,10 @@
                   </ion-select>
                 </ion-item>
                 <br />
-                <!--ion-item>
-                  <ion-label>Start Date</ion-label>
-                  <ion-datetime displayFormat="MMMM" placeholder="Select Date"></ion-datetime>
-                </ion-item-->
                 <div id="populateMontlyTotalAdmissions"></div>
               </ion-col>
             </ion-row>
-          </ion-card>
+          </ion-card-->
 
 
           <!--
